Added vectorizer notebook
Added the vectorizer notebook again since the previous one was not accepting any changes

--- a/Sentiment Analysis/vectorizer.ipynb
+++ b/Sentiment Analysis/vectorizer.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['game', 'of', 'thrones', 'is', 'an', 'amazing', 'tv', 'series'], ['game', 'of', 'thrones', 'is', 'the', 'best', 'tv', 'series'], ['game', 'of', 'thrones', 'is', 'so', 'great']]\n"
+      "{'thrones', 'tv', 'best', 'amazing', 'game', 'the', 'great', 'an', 'so', 'series', 'is', 'of'}\n"
      ]
     }
    ],
@@ -33,44 +33,35 @@
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "vectorizer = CountVectorizer(preprocessor=lambda x:x, tokenizer=lambda x:x)\n",
     "# print(vectorizer.get_feature_names())\n",
-    "# ll=l_doc1\n",
-    "# ll.extend(l_doc2)\n",
-    "# ll.extend(l_doc3)\n",
-    "# ll = set(ll)\n",
+    "ll=l_doc1\n",
+    "ll.extend(l_doc2)\n",
+    "ll.extend(l_doc3)\n",
+    "ll = set(ll)\n",
     "print(ll)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0             ==>                (0, 3)\t1\n",
-      "  (0, 6)\t1\n",
-      "  (0, 10)\t1\n",
+      "0             ==>                (0, 12)\t1\n",
       "  (0, 5)\t1\n",
-      "  (0, 1)\t1\n",
-      "  (0, 0)\t1\n",
-      "  (0, 11)\t1\n",
-      "  (0, 7)\t1\n",
-      "1             ==>                (0, 3)\t1\n",
-      "  (0, 6)\t1\n",
       "  (0, 10)\t1\n",
-      "  (0, 5)\t1\n",
-      "  (0, 11)\t1\n",
-      "  (0, 7)\t1\n",
       "  (0, 9)\t1\n",
-      "  (0, 2)\t1\n",
-      "2             ==>                (0, 3)\t1\n",
-      "  (0, 6)\t1\n",
-      "  (0, 10)\t1\n",
-      "  (0, 5)\t1\n",
       "  (0, 8)\t1\n",
-      "  (0, 4)\t1\n"
+      "  (0, 2)\t1\n",
+      "  (0, 11)\t1\n",
+      "1             ==>                (0, 12)\t1\n",
+      "  (0, 13)\t1\n",
+      "2             ==>                (0, 12)\t1\n",
+      "  (0, 2)\t1\n",
+      "  (0, 11)\t1\n",
+      "  (0, 1)\t1\n"
      ]
     },
     {
@@ -94,64 +85,238 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>amazing</th>\n",
-       "      <th>an</th>\n",
-       "      <th>best</th>\n",
-       "      <th>game</th>\n",
-       "      <th>great</th>\n",
-       "      <th>is</th>\n",
-       "      <th>of</th>\n",
-       "      <th>series</th>\n",
-       "      <th>so</th>\n",
-       "      <th>the</th>\n",
-       "      <th>thrones</th>\n",
-       "      <th>tv</th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "      <th>e</th>\n",
+       "      <th>f</th>\n",
+       "      <th>g</th>\n",
+       "      <th>h</th>\n",
+       "      <th>i</th>\n",
+       "      <th>m</th>\n",
+       "      <th>n</th>\n",
+       "      <th>o</th>\n",
+       "      <th>r</th>\n",
+       "      <th>s</th>\n",
+       "      <th>t</th>\n",
+       "      <th>v</th>\n",
+       "      <th>z</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -159,13 +324,22 @@
        "</div>"
       ],
       "text/plain": [
-       "   amazing  an  best  game  great  is  of  series  so  the  thrones  tv\n",
-       "0        1   1     0     1      0   1   1       1   0    0        1   1\n",
-       "1        0   0     1     1      0   1   1       1   0    1        1   1\n",
-       "2        0   0     0     1      1   1   1       0   1    0        1   0"
+       "    a  b  e  f  g  h  i  m  n  o  r  s  t  v  z\n",
+       "0   0  0  1  0  0  1  0  0  1  1  1  1  1  0  0\n",
+       "1   0  0  0  0  0  0  0  0  0  0  0  0  1  1  0\n",
+       "2   0  1  1  0  0  0  0  0  0  0  0  1  1  0  0\n",
+       "3   2  0  0  0  1  0  1  1  1  0  0  0  0  0  1\n",
+       "4   1  0  1  0  1  0  0  1  0  0  0  0  0  0  0\n",
+       "5   0  0  1  0  0  1  0  0  0  0  0  0  1  0  0\n",
+       "6   1  0  1  0  1  0  0  0  0  0  1  0  1  0  0\n",
+       "7   1  0  0  0  0  0  0  0  1  0  0  0  0  0  0\n",
+       "8   0  0  0  0  0  0  0  0  0  1  0  1  0  0  0\n",
+       "9   0  0  2  0  0  0  1  0  0  0  1  2  0  0  0\n",
+       "10  0  0  0  0  0  0  1  0  0  0  0  1  0  0  0\n",
+       "11  0  0  0  1  0  0  0  0  0  1  0  0  0  0  0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
