Added RNN classification for sentiment analysis

--- a/Sentiment Analysis/sentiment_analysis.ipynb
+++ b/Sentiment Analysis/sentiment_analysis.ipynb
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +738,7 @@
        "         0.0112998 ,  0.        ]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,6 +749,365 @@
     "pr.normalize(features_train,)\n",
     "pr.normalize(features_test,)\n",
     "pr.normalize(features_test,)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classification using BoW features    \n",
+    "\n",
+    "Feeding the above calculated vectors into a classifier (Naive bayes from the scikit-learn) and evaluating it on the test set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from sklearn.naive_bayes import GaussianNB\n",
+    "\n",
+    "# # TODO: Train a Guassian Naive Bayes classifier\n",
+    "# clf1 = ?\n",
+    "\n",
+    "# # Calculate the mean accuracy score on training and test sets\n",
+    "# print(\"[{}] Accuracy: train = {}, test = {}\".format(\n",
+    "#         clf1.__class__.__name__,\n",
+    "#         clf1.score(features_train, labels_train),\n",
+    "#         clf1.score(features_test, labels_test)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gradient-Boosted Decision Tree Clasifier\n",
+    "\n",
+    "\n",
+    "\n",
+    "Tree-based algorithms often work quite well on Bag-of-Words as their highly discontinuous and sparse nature is nicely matched by the structure of trees.\n",
+    "\n",
+    "Use GradientBoostingClassifier from scikit-learn to classify the BoW data. This model has a number of parameters. \n",
+    "\n",
+    "Lets see how much we can get over Naive Bayes in terms of accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<!-- from sklearn.ensemble import GradientBoostingClassifier\n",
+    "\n",
+    "n_estimators = ?\n",
+    "\n",
+    "def classify_gboost(X_train, X_test, y_train, y_test):        \n",
+    "    # Initialize classifier\n",
+    "    clf = GradientBoostingClassifier(n_estimators=n_estimators, learning_rate=1.0, max_depth=1, random_state=0)\n",
+    "\n",
+    "    # TODO: Classify the data using GradientBoostingClassifier\n",
+    "    \n",
+    "    # TODO(optional): Perform hyperparameter tuning / model selection\n",
+    "    \n",
+    "    # TODO: Print final training & test accuracy\n",
+    "    \n",
+    "    # Return best classifier model\n",
+    "    return clf\n",
+    " -->\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# RECURRENT NEURAL NETWORKS\n",
+    "\n",
+    "We just saw how the task of sentiment analysis can be solved via a traditional machine learning approach: BoW + a nonlinear classifier. We now switch gears and use Recurrent Neural Networks, and in particular LSTMs, to perform sentiment analysis in Keras. Conveniently, Keras has a built-in <a href=\"https://keras.io/api/datasets/#imdb-movie-reviews-sentiment-classification\">IMDb movie reviews dataset </a>that we can use, with the same vocabulary size."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded dataset with 25000 training samples, 25000 test samples\n"
+     ]
+    }
+   ],
+   "source": [
+    "# !pip3 install tensorflow\n",
+    "# !pip3 install keras\n",
+    "\n",
+    "from keras.datasets import imdb #importing the imdb dataset from the keras library\n",
+    "\n",
+    "vocabulary_size = 5000 # setting the vocabulary size to 5000\n",
+    "\n",
+    "(X_train, y_train), (X_test, y_test) = imdb.load_data(num_words=vocabulary_size)\n",
+    "\n",
+    "print(\"Loaded dataset with {} training samples, {} test samples\".format(len(X_train), len(X_test)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---Review---\n",
+      " [1, 4, 2, 716, 4, 65, 7, 4, 689, 4367, 2, 2343, 4804, 2, 2, 2, 2, 2315, 2, 2, 2, 2, 4, 2, 628, 2, 37, 9, 150, 4, 2, 4069, 11, 2909, 4, 2, 847, 313, 6, 176, 2, 9, 2, 138, 9, 4434, 19, 4, 96, 183, 26, 4, 192, 15, 27, 2, 799, 2, 2, 588, 84, 11, 4, 3231, 152, 339, 2, 42, 4869, 2, 2, 345, 4804, 2, 142, 43, 218, 208, 54, 29, 853, 659, 46, 4, 882, 183, 80, 115, 30, 4, 172, 174, 10, 10, 1001, 398, 1001, 1055, 526, 34, 3717, 2, 2, 2, 17, 4, 2, 1094, 871, 64, 85, 22, 2030, 1109, 38, 230, 9, 4, 4324, 2, 251, 2, 1034, 195, 301, 14, 16, 31, 7, 4, 2, 8, 783, 2, 33, 4, 2945, 103, 465, 2, 42, 845, 45, 446, 11, 1895, 19, 184, 76, 32, 4, 2, 207, 110, 13, 197, 4, 2, 16, 601, 964, 2152, 595, 13, 258, 4, 1730, 66, 338, 55, 2, 4, 550, 728, 65, 1196, 8, 1839, 61, 1546, 42, 2, 61, 602, 120, 45, 2, 6, 320, 786, 99, 196, 2, 786, 2, 4, 225, 4, 373, 1009, 33, 4, 130, 63, 69, 72, 1104, 46, 1292, 225, 14, 66, 194, 2, 1703, 56, 8, 803, 1004, 6, 2, 155, 11, 4, 2, 3231, 45, 853, 2029, 8, 30, 6, 117, 430, 19, 6, 2, 9, 15, 66, 424, 8, 2337, 178, 9, 15, 66, 424, 8, 1465, 178, 9, 15, 66, 142, 15, 9, 424, 8, 28, 178, 662, 44, 12, 17, 4, 130, 898, 1686, 9, 6, 2, 267, 185, 430, 4, 118, 2, 277, 15, 4, 1188, 100, 216, 56, 19, 4, 357, 114, 2, 367, 45, 115, 93, 788, 121, 4, 2, 79, 32, 68, 278, 39, 8, 818, 162, 4165, 237, 600, 7, 98, 306, 8, 157, 549, 628, 11, 6, 2, 13, 824, 15, 4104, 76, 42, 138, 36, 774, 77, 1059, 159, 150, 4, 229, 497, 8, 1493, 11, 175, 251, 453, 19, 2, 189, 12, 43, 127, 6, 394, 292, 7, 2, 4, 107, 8, 4, 2826, 15, 1082, 1251, 9, 906, 42, 1134, 6, 66, 78, 22, 15, 13, 244, 2519, 8, 135, 233, 52, 44, 10, 10, 466, 112, 398, 526, 34, 4, 1572, 4413, 2, 1094, 225, 57, 599, 133, 225, 6, 227, 7, 541, 4323, 6, 171, 139, 7, 539, 2, 56, 11, 6, 3231, 21, 164, 25, 426, 81, 33, 344, 624, 19, 6, 4617, 7, 2, 2, 6, 2, 4, 22, 9, 1082, 629, 237, 45, 188, 6, 55, 655, 707, 2, 956, 225, 1456, 841, 42, 1310, 225, 6, 2493, 1467, 2, 2828, 21, 4, 2, 9, 364, 23, 4, 2228, 2407, 225, 24, 76, 133, 18, 4, 189, 2293, 10, 10, 814, 11, 2, 11, 2642, 14, 47, 15, 682, 364, 352, 168, 44, 12, 45, 24, 913, 93, 21, 247, 2441, 4, 116, 34, 35, 1859, 8, 72, 177, 9, 164, 8, 901, 344, 44, 13, 191, 135, 13, 126, 421, 233, 18, 259, 10, 10, 4, 2, 2, 4, 2, 3074, 7, 112, 199, 753, 357, 39, 63, 12, 115, 2, 763, 8, 15, 35, 3282, 1523, 65, 57, 599, 6, 1916, 277, 1730, 37, 25, 92, 202, 6, 2, 44, 25, 28, 6, 22, 15, 122, 24, 4171, 72, 33, 32]\n",
+      "---Label--\n",
+      " 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"---Review---\\n\", X_train[7]) # review is stored already stored as a sequence of integers where the number are word IDs that have been preassigned\n",
+    "print(\"---Label--\\n\", y_train[7]) # 0 for negative and 1 for positive\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Review (with words) ---\n",
+      "['the', 'of', 'and', 'local', 'of', 'their', 'br', 'of', 'attention', 'widow', 'and', 'captures', 'parties', 'and', 'and', 'and', 'and', 'excitement', 'and', 'and', 'and', 'and', 'of', 'and', 'english', 'and', 'like', 'it', 'years', 'of', 'and', 'unintentional', 'this', 'hitchcock', 'of', 'and', 'learn', 'everyone', 'is', 'quite', 'and', 'it', 'and', 'such', 'it', 'bonus', 'film', 'of', 'too', 'seems', 'he', 'of', 'enough', 'for', 'be', 'and', 'editing', 'and', 'and', 'please', 'great', 'this', 'of', 'shoots', 'thing', '3', 'and', \"it's\", 'mentioning', 'and', 'and', 'given', 'parties', 'and', 'back', 'out', 'interesting', 'times', 'no', 'all', 'average', 'talking', 'some', 'of', 'nor', 'seems', 'into', 'best', 'at', 'of', 'every', 'cast', 'i', 'i', 'inside', 'keep', 'inside', 'large', 'viewer', 'who', 'obscure', 'and', 'and', 'and', 'movie', 'of', 'and', 'entirely', \"you've\", 'see', 'because', 'you', 'deals', 'successful', 'her', 'anything', 'it', 'of', 'dedicated', 'and', 'hard', 'and', 'further', \"that's\", 'takes', 'as', 'with', 'by', 'br', 'of', 'and', 'in', 'minute', 'and', 'they', 'of', 'westerns', 'watch', 'seemed', 'and', \"it's\", 'lee', 'if', 'oh', 'this', 'japan', 'film', 'around', 'get', 'an', 'of', 'and', 'always', 'life', 'was', 'between', 'of', 'and', 'with', 'group', 'rate', 'code', \"film's\", 'was', 'although', 'of', 'arts', 'had', 'death', 'time', 'and', 'of', 'anyway', 'romantic', 'their', 'won', 'in', 'kevin', 'only', 'flying', \"it's\", 'and', 'only', 'cut', 'show', 'if', 'and', 'is', 'star', 'stay', 'movies', 'both', 'and', 'stay', 'and', 'of', 'music', 'of', 'tell', 'missing', 'they', 'of', 'here', 'really', 'me', 'we', 'value', 'some', 'silent', 'music', 'as', 'had', 'thought', 'and', 'realized', 'she', 'in', 'sorry', 'reasons', 'is', 'and', '10', 'this', 'of', 'and', 'shoots', 'if', 'average', 'remembered', 'in', 'at', 'is', 'over', 'worse', 'film', 'is', 'and', 'it', 'for', 'had', 'absolutely', 'in', 'naive', 'want', 'it', 'for', 'had', 'absolutely', 'in', 'j', 'want', 'it', 'for', 'had', 'back', 'for', 'it', 'absolutely', 'in', 'one', 'want', 'shots', 'has', 'that', 'movie', 'of', 'here', 'write', 'whatsoever', 'it', 'is', 'and', 'set', 'got', 'worse', 'of', 'where', 'and', 'once', 'for', 'of', 'accent', 'after', 'saw', 'she', 'film', 'of', 'rest', 'little', 'and', 'camera', 'if', 'best', 'way', 'elements', 'know', 'of', 'and', 'also', 'an', 'were', 'sense', 'or', 'in', 'realistic', 'actually', 'satan', \"he's\", 'score', 'br', 'any', 'himself', 'in', 'another', 'type', 'english', 'this', 'is', 'and', 'was', 'tom', 'for', 'dating', 'get', \"it's\", 'such', 'from', 'fantastic', 'will', 'pace', 'new', 'years', 'of', 'guy', 'game', 'in', 'murders', 'this', 'us', 'hard', 'lives', 'film', 'and', 'fact', 'that', 'out', 'end', 'is', 'getting', 'together', 'br', 'and', 'of', 'seen', 'in', 'of', 'jail', 'for', 'sees', 'utterly', 'it', 'meet', \"it's\", 'depth', 'is', 'had', 'do', 'you', 'for', 'was', 'rather', 'convince', 'in', 'why', 'last', 'very', 'has', 'i', 'i', 'throughout', 'never', 'keep', 'viewer', 'who', 'of', 'becoming', 'switch', 'and', 'entirely', 'music', 'even', 'interest', 'scene', 'music', 'is', 'far', 'br', 'voice', 'riveting', 'is', 'again', 'something', 'br', 'decent', 'and', 'she', 'this', 'is', 'shoots', 'not', 'director', 'have', 'against', 'people', 'they', 'line', 'cinematography', 'film', 'is', 'couples', 'br', 'and', 'and', 'is', 'and', 'of', 'you', 'it', 'sees', 'hero', \"he's\", 'if', \"can't\", 'is', 'time', 'husband', 'silly', 'and', 'result', 'music', 'image', 'sequences', \"it's\", 'chase', 'music', 'is', 'veteran', 'include', 'and', 'freeman', 'not', 'of', 'and', 'it', 'along', 'are', 'of', 'hearing', 'cutting', 'music', 'his', 'get', 'scene', 'but', 'of', 'fact', 'correct', 'i', 'i', 'means', 'this', 'and', 'this', 'blockbuster', 'as', 'there', 'for', 'disappointed', 'along', 'wrong', 'few', 'has', 'that', 'if', 'his', 'weird', 'way', 'not', 'girl', 'display', 'of', 'love', 'who', 'so', 'friendship', 'in', 'we', 'down', 'it', 'director', 'in', 'situation', 'line', 'has', 'was', 'big', 'why', 'was', 'your', 'supposed', 'last', 'but', 'especially', 'i', 'i', 'of', 'and', 'and', 'of', 'and', 'internet', 'br', 'never', 'give', 'theme', 'rest', 'or', 'really', 'that', 'best', 'and', 'release', 'in', 'for', 'so', 'multi', 'random', 'their', 'even', 'interest', 'is', 'judge', 'once', 'arts', 'like', 'have', 'then', 'own', 'is', 'and', 'has', 'have', 'one', 'is', 'you', 'for', 'off', 'his', 'dutch', 'we', 'they', 'an']\n",
+      "--- Label ---\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Mapping these IDs back to the words\n",
+    "\n",
+    "word2id=imdb.get_word_index()\n",
+    "# print(word2id.items())\n",
+    "id2word={i:word for word, i in word2id.items()}\n",
+    "print(\"--- Review (with words) ---\")\n",
+    "print ([id2word.get(i,\" \") for i in X_train[7]])\n",
+    "print(\"--- Label ---\")\n",
+    "print(y_train[7])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## PADDING THE SEQUENCES\n",
+    "\n",
+    "Unlike our Bag-of-Words approach, where we simply summarized the counts of each word in a document, this representation essentially retains the entire sequence of words (minus punctuation, stopwords, etc.). This is critical for RNNs to function. But it also means that now the features can be of different lengths!\n",
+    "\n",
+    "But in order to feed the RNN, all input documents must have the same length. We will make all the reviews of the same length by truncating the longer reviews to `max_words` and padding the shorter reviews with a null value (0).\n",
+    "\n",
+    "This can be done easily by using the  `pad_sequences()` function in Keras."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.utils import pad_sequences\n",
+    "\n",
+    "max_words=500 # setting the maximum number of words per document (for both training and testing)\n",
+    "\n",
+    "X_train = pad_sequences(X_train, maxlen=max_words)\n",
+    "X_test= pad_sequences(X_test, maxlen=max_words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Designing an RNN model for sentiment analysis\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_2\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " embedding_1 (Embedding)     (None, 500, 32)           160000    \n",
+      "                                                                 \n",
+      " lstm_1 (LSTM)               (None, 100)               53200     \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 1)                 101       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 213,301\n",
+      "Trainable params: 213,301\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.models import Sequential #groups a linear stack of layers into a keras model\n",
+    "from keras.layers import Embedding, LSTM, Dense, Dropout\n",
+    "\n",
+    "\n",
+    "#Designing the model\n",
+    "embedding_size=32 \n",
+    "model=Sequential() #making an object instance of sequential\n",
+    "model.add(Embedding(vocabulary_size, embedding_size, input_length=max_words)) # adding the embedding layer to turn positive integers (indexes) into dense vectors of fixed size.\n",
+    "model.add(LSTM(100)) # adding the Long Short-Term Memory layer\n",
+    "model.add(Dense(1, activation=\"sigmoid\")) # adding the dense layer\n",
+    "\n",
+    "print(model.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training and Evaluating the model\n",
+    "\n",
+    "In keras, we first need to compile the model by specifying the loss function and optimizer we want to use while training, as well as any evaluation metrics we want to measure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are two important training parameters that we have to specify - batch size and number of training epochs, which together with your model architecture determine the total training time."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-11-11 16:19:49.000140: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 49872000 exceeds 10% of free system memory.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "390/390 [==============================] - 74s 187ms/step - loss: 0.5064 - accuracy: 0.7345 - val_loss: 0.2155 - val_accuracy: 0.9219\n",
+      "Epoch 2/3\n",
+      "390/390 [==============================] - 70s 179ms/step - loss: 0.2857 - accuracy: 0.8856 - val_loss: 0.1882 - val_accuracy: 0.9531\n",
+      "Epoch 3/3\n",
+      "390/390 [==============================] - 70s 179ms/step - loss: 0.2998 - accuracy: 0.8759 - val_loss: 0.2008 - val_accuracy: 0.9375\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f70cdf0bf10>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch_size = 64\n",
+    "num_epochs = 3\n",
+    "\n",
+    "# TODO(optional): Reserve/specify some training data for validation (not to be used for training)\n",
+    "X_valid, y_valid = X_train[:batch_size], y_train[:batch_size]  # first batch_size samples\n",
+    "X_train2, y_train2 = X_train[batch_size:], y_train[batch_size:]  # rest for training\n",
+    "\n",
+    "# TODO: Train your model\n",
+    "model.fit(X_train2, y_train2,\n",
+    "          validation_data=(X_valid, y_valid),\n",
+    "          batch_size=batch_size, epochs=num_epochs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# saving the model for future use\n",
+    "import os\n",
+    "\n",
+    "cache_dir = os.path.join(\"cache\", \"sentiment_analysis\")\n",
+    "model_file = \"rnn_model.h5\"  # HDF5 file\n",
+    "model.save(os.path.join(cache_dir, model_file))\n",
+    "\n",
+    "#to use it in future\n",
+    "#from keras.models import load_model\n",
+    "#model = load_model(os.path.join(cache_dir, model_file))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing the accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-11-11 16:24:59.344696: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 50000000 exceeds 10% of free system memory.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy: 0.8715999722480774\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate your model on the test set\n",
+    "scores = model.evaluate(X_test, y_test, verbose=0)  # returns loss and other metrics specified in model.compile()\n",
+    "print(\"Test accuracy:\", scores[1])  # scores[1] should correspond to accuracy if you passed in metrics=['accuracy']"
    ]
   },
   {
